@@ -3,6 +3,8 @@
    ok dtucker@
  - (dtucker) [ssh-rand-helper.c] Provide seed_rng since it may be called
    via mkstemp in some configurations.  ok djm@
+ - (dtucker) [auth-shadow.c] Prevent compiler warnings if "DAY" is defined
+   by the system headers.
 
 20050215
  - (dtucker) [config.sh.in] Collect oslevel -r too.
@@ -2137,4 +2139,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3655 2005/02/16 02:20:07 dtucker Exp $
+$Id: ChangeLog,v 1.3656 2005/02/16 03:20:06 dtucker Exp $
